--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,32 @@
     <title>Cart</title>
 </head>
 <body>
-    
+    <header>
+        <nav><a href="index.html">Go home</a></nav>
+        <h1>Cart</h1>
+    </header>
+    <main>
+        <table>
+            <tr>
+                <th>Product name</th>
+                <th>Price</th>
+                <th>Quantity</th>
+            </tr>
+            <tr>
+                <td>Baby Yoda</td>
+                <td>20$</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>Banana</td>
+                <td>15$</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>Total:</td>
+                <td colspan="2">275$</td>
+            </tr>
+        </table>
+    </main>
 </body>
 </html>
