--- a/index.html
+++ b/index.html
@@ -6,31 +6,82 @@
     <title>Stickerz</title>
 </head>
 <body>
-    <header>
+    <header id="home">
 <nav>
-    <div class="logo">Srickerz</div>
+    <div class="logo">Srickerz!</div>
     <ul class="menu">
-        <li<a href="#">Home</a></li>
-        <li<a href="#">Products</a></li>
-        <li<a href="#">Contacts</a></li>
-        <li<a href="cart.html">Cart</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+        <li><a href="cart.html">Cart</a></li>
     </ul>
 </nav>
-<div class="baner"></div>
+    <div class="baner">
+    <h1>Stickerz</h1>
+    <button>Shop now</button>
+     </div>
     </header>
     <main>
-        <h2> id="products">Products</h2>
-        <div class="product-list">
-            <article>
+        <article>
+        <h2 id="products">Products</h2>
+        <div class="product-list"> </div></article>
+        <article>
                 <h3>Baby Yoda</h3>
                 <img src="image/baby-yoda.svg" alt="Baby yoda">
-            </article>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur alias nemo
+                    reiciendis
+                    incidunt dolore inventore perspiciatis omnis cupiditate odio nostrum, ipsa iste rem nesciunt beatae
+                    quam saepe illo!
+                    Non!</p>
+                    <div class="button-container">
+                    <button>Info</button>
+                    <button>Buy</button>
         </div>
+         </article>
+         <article>
+             <h3>Banana</h3>
+             <img src="image/banana.svg" alt="Banana">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur alias nemo
+                    reiciendis
+                    incidunt dolore inventore perspiciatis omnis cupiditate odio nostrum, ipsa iste rem nesciunt beatae
+                    quam saepe illo!
+                    Non!</p>
+                    <div class="button-container">
+                    <button>Info</button>
+                    <button>Buy</button>  
+                    </div>
+         </article>
+         <article>
+             <h3>Girl</h3>
+             <img src="image/girl.svg" alt="Girl">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur alias nemo
+                    reiciendis
+                    incidunt dolore inventore perspiciatis omnis cupiditate odio nostrum, ipsa iste rem nesciunt beatae
+                    quam saepe illo!
+                    Non!</p>
+                    <div class="button-container">
+                    <button>Info</button>
+                    <button>Buy</button>  
+                    </div>
+         </article>
+         <article>
+             <h3>Viking</h3>
+             <img src="image/viking.svg" alt="Viking">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur alias nemo
+                    reiciendis
+                    incidunt dolore inventore perspiciatis omnis cupiditate odio nostrum, ipsa iste rem nesciunt beatae
+                    quam saepe illo!
+                    Non!</p>
+                    <div class="button-container">
+                    <button>Info</button>
+                    <button>Buy</button>  
+                    </div>
+         </article>
     </main>
 
     <footer>
-        <h2>Contacts</h2>
-        <form method="" action="">
+        <h2 id="contacts">Contacts</h2>
+        <form method="POST" action="YOUR_ACTION_HERE">
             <label>
             User name : <input type="text" name="user-name" placeholder="User name">
             </label>
@@ -44,7 +95,7 @@
             </label>
             <br>
             <input type="submit">
-            <inut type="reset">
+            <input type="reset">
         </form>
     </footer>
 </body>
