--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stickerz</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="image/baby-yoda.svg">
 </head>
 <body>
     <header id="home">
 <nav>
     <div class="logo">Srickerz!</div>
+    <label class="burger-icon" for="burger-checkbox"></label>
+    <input type="checkbox" id="burger-checkbox">
     <ul class="menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#products">Products</a></li>
