--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="home">
 <nav>
     <div class="logo">Srickerz!</div>
-    <label class="burger-icon" for="burger-checkbox"></label>
+    <label class="burger-icon" for="burger-checkbox">☰</label>
     <input type="checkbox" id="burger-checkbox">
     <ul class="menu">
         <li><a href="#home">Home</a></li>
